# rag-chatbot-enhanced

./: .flake8  CLAUDE.md  app_flow_diagram.md  demo_clickable_links.html  frontend-changes.md  pyproject.toml  query_flow_diagram.md
.github/workflows/: claude.yml
backend/: ai_generator.py  app.py  search_tools.py  vector_store.py
backend/tests/: conftest.py  run_all_tests.py  test_ai_generator.py  test_api_endpoints.py  test_course_search_tool.py  test_rag_system.py
frontend/: index.html  script.js  style.css
scripts/: check.py  format.py  lint.py
